Fix jumping buttons on hover
With some themes, buttons of class "system-menu-action" lose their 1px border on hover, which makes them jump around. It's even worse when there are multiple buttons in one row. Fixed by adding 1px transparent border to :hover.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,6 +37,15 @@
     icon-size: 15px;
 }
 
+.system-menu-action{
+  border-width: 1px;
+}
+
+.system-menu-action:hover{
+  border-color: transparent;
+  border-width: 1px;
+}
+
 .groups-submenu-label-item{
   font-style: italic;
 }
